Managed to make it start
but it still doesn't work properly :')

--- a/views/subviews/content/firstpage.twig
+++ b/views/subviews/content/firstpage.twig
@@ -14,25 +14,10 @@
     This content is included inside mainrow.twig
 
 #}
-<script>
+<!-- <script>
     GazeCloudAPI.StartEyeTracking();
     
-    GazeCloudAPI.OnResult = function (GazeData){
-       console.log(GazeData.state);
-       console.log(GazeData.docX);
-       console.log(GazeData.docY);
-       console.log(GazeData.time);
-       GazeCloudAPI.UseClickRecalibration = true;
-    }
-    
-    </script>
-    
-    <script>
-        
-        GazeCloudAPI.OnCalibrationComplete =function(){ 
-            console.log(‘gaze Calibration Complete’) 
-        }
-    </script>
+    </script> -->
     
 {# render the layout_global content block #}
 
