--- a/views/subviews/header/head.twig
+++ b/views/subviews/header/head.twig
@@ -22,90 +22,71 @@
 {{ registerScript('activateConfirmButton',"activateConfirmButton();", "POS_POSTSCRIPT") }}
 
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="generator" content="LimeSurvey http://www.limesurvey.org" />
+    
     <!-- IMPORT  GAZECLOUD API !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <script src="https://api.gazerecorder.com/GazeCloudAPI.js" ></script>
    
-    <!-- IMPORT GAZERECORDER AND GAZEPLAYER !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- Not needed but here are the links for additional libraries: GazeRecorder and GazePlayer -->
     <!-- <script src="https://app.gazerecorder.com/GazeRecorderAPI.js"></script> -->
     <!-- <script src=”https://app.gazerecorder.com/GazePlayer.js”></script> -->
     
         <script type = "text/javascript" >
 
-            
-             function PlotGaze(GazeData) {
-    
-            /*
-        	GazeData.state // 0: valid gaze data; -1 : face tracking lost, 1 : gaze uncalibrated
-        	GazeData.docX // gaze x in document coordinates
-        	GazeData.docY // gaze y in document cordinates
-        	GazeData.time // timestamp
-            */
-    
-             
-            document.getElementById("GazeData").innerHTML = "GazeX: " + GazeData.GazeX + " GazeY: " + GazeData.GazeY;
-            document.getElementById("HeadPhoseData").innerHTML = " HeadX: " + GazeData.HeadX + " HeadY: " + GazeData.HeadY + " HeadZ: " + GazeData.HeadZ;
-            document.getElementById("HeadRotData").innerHTML = " Yaw: " + GazeData.HeadYaw + " Pitch: " + GazeData.HeadPitch + " Roll: " + GazeData.HeadRoll;
-             
-    
+         function PlotGaze(GazeData) {
+
+/*
+	GazeData.state // 0: valid gaze data; -1 : face tracking lost, 1 : gaze uncalibrated
+	GazeData.docX // gaze x in document coordinates
+	GazeData.docY // gaze y in document cordinates
+	GazeData.time // timestamp
+*/
+
+         
+             document.getElementById("GazeData").innerHTML = "GazeX: " + GazeData.GazeX + " GazeY: " + GazeData.GazeY;
+             document.getElementById("HeadPhoseData").innerHTML = " HeadX: " + GazeData.HeadX + " HeadY: " + GazeData.HeadY + " HeadZ: " + GazeData.HeadZ;
+             document.getElementById("HeadRotData").innerHTML = " Yaw: " + GazeData.HeadYaw + " Pitch: " + GazeData.HeadPitch + " Roll: " + GazeData.HeadRoll;
+         
+
              var x = GazeData.docX;
              var y = GazeData.docY;
              
              var gaze = document.getElementById("gaze");
              x -= gaze .clientWidth/2;
              y -= gaze .clientHeight/2;
-             
-             
-        	gaze.style.left = x + "px";
+         
+         
+    	    gaze.style.left = x + "px";
     	    gaze.style.top = y + "px";
-    
-             
-             if(GazeData.state != 0)
-             {
-             	if( gaze.style.display  == 'block')
-             	gaze.style.display = 'none';
-             }
-             else
-             {
-             	if( gaze.style.display  == 'none')
-             	gaze.style.display = 'block';
-             }
-             
-            GazeCloudAPI.OnResult = function (GazeData){
-               console.log(GazeData.state);
-               console.log(GazeData.docX);
-               console.log(GazeData.docY);
-               console.log(GazeData.time);
-               GazeCloudAPI.UseClickRecalibration = true;
+            
+         
+            if(GazeData.state != 0)
+            {
+         	    if( gaze.style.display  == 'block')
+         	        gaze  .style.display = 'none';
             }
+            else
+            {
+            	if( gaze.style.display  == 'none')
+         	gaze  .style.display = 'block';
+            }
+         
+        }
+         
+         //////set callbacks/////////
+        window.addEventListener("load", function() {
 
-             
-             }
-             
-             //////set callbacks/////////
-            window.addEventListener("load", function() {
-    
-                GazeCloudAPI.OnCalibrationComplete =function(){
-                     console.log('gaze Calibration Complete')  
-                 }
-                 
-                 GazeCloudAPI.OnCamDenied =  function(){
-                     console.log('camera  access denied')
-                     }
-                     
-                 GazeCloudAPI.OnError =  function(msg){
-                     console.log('err: ' + msg)  
-                 }
-                 GazeCloudAPI.UseClickRecalibration = true;
-              	 GazeCloudAPI.OnResult = PlotGaze; 
-                  });
-             
-          </script>
-
-    
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="generator" content="LimeSurvey http://www.limesurvey.org" />
+         GazeCloudAPI.OnCalibrationComplete =function(){ console.log('gaze Calibration Complete')  }
+         GazeCloudAPI.OnCamDenied =  function(){ console.log('camera  access denied')  }
+         GazeCloudAPI.OnError =  function(msg){ console.log('err: ' + msg)  }
+         GazeCloudAPI.UseClickRecalibration = true;
+      	 GazeCloudAPI.OnResult = PlotGaze; 
+          });
+     
+     </script>
 
     {{ aSurveyInfo.metas }}
 
