--- a/views/subviews/survey/group.twig
+++ b/views/subviews/survey/group.twig
@@ -19,20 +19,104 @@
     {{ dump(aGroup) }}
 
 #}
+
+
+<div align="center">
     <!-- Creating some buttons to start/stop the eye tracking, may put them in separate places later --> 
-    <p> <strong>Temp control buttons</strong></p>
-    <button  type="button" onclick="GazeCloudAPI.StartEyeTracking();">Start</button>
-      <button  type="button" onclick="GazeCloudAPI.StopEyeTracking();">Stop</button>
+    <p style="Noto Sans"> <strong>JS library control buttons</strong></p>
+    <p style="Noto Sans"> You'll be asked to spend a few minutes looking at moving dots in order to calibrate the library</p>
+    <p style="Noto Sans"> Please try to focus your eyes on the dots as much as possible.</p>
+    <button id="start" type="button" onclick="GazeCloudAPI.StartEyeTracking();">Start eyetracking</button>
+    <button id="stop" type="button" onclick="GazeCloudAPI.StopEyeTracking();">Stop eyetracking</button>
+        
+        <style type="text/css">
+        #start {
+            color: #fff;
+            border: solid #39993f;
+            -moz-border-radius: 4px;
+            -webkit-border-radius: 4px;
+            background-color: #39993f;
+            padding: 0.3125em 1em;
+            cursor: pointer;
+            overflow: visible;
+            font-family: Noto Sans;
+            font-size: 1em;
+            font-weight: 600;
+            outline: 0 none /* removes focus outline in IE */;
+            margin: 0px;
+            line-height: 1.6em;
+                
+        }
+        #start:hover {
+            color: #fff;
+            border: solid #2e6da4;
+            -moz-border-radius: 4px;
+            -webkit-border-radius: 4px;
+            background-color: #31708f;
+            padding: 0.3125em 1em;
+            cursor: pointer;
+            white-space: nowrap;
+            overflow: visible;
+            font-family: Noto Sans;
+            font-size: 1em;
+            outline: 0 none /* removes focus outline in IE */;
+            margin: 0px;
+            line-height: 1.6em;
+
+        }
+        </style>
+        
+        <style type="text/css">
+        #stop {
+            color: #fff;
+            border: solid #a94442;
+            -moz-border-radius: 4px;
+            -webkit-border-radius: 4px;
+            background-color: #a94442;
+            padding: 0.3125em 1em;
+            cursor: pointer;
+            white-space: nowrap;
+            overflow: visible;
+            font-size: 1em;
+            font-weight: 600;
+            outline: 0 none /* removes focus outline in IE */;
+            margin: 0px;
+            line-height: 1.6em;
+        }
+        #stop:hover {
+            color: #fff;
+            border: solid #2e6da4;
+            -moz-border-radius: 4px;
+            -webkit-border-radius: 4px;
+            background-color: #31708f;
+            padding: 0.3125em 1em;
+            cursor: pointer;
+            white-space: nowrap;
+            overflow: visible;
+            font-family: Noto Sans;
+            font-size: 1em;
+            outline: 0 none /* removes focus outline in IE */;
+            margin: 0px;
+            line-height: 1.6em;
+
+
+        }
+        </style>
+        
       <div>
-         <p>  
+          <p></p>
+         <p style="Noto Sans">  
             Real-Time Result:
          <p id = "GazeData" > </p>
          <p id = "HeadPhoseData" > </p>
          <p id = "HeadRotData" > </p>
          </p>
       </div>
-      <div id ="gaze" style ='position: absolute;display:none;width: 100px;height: 100px;border-radius: 50%;border: solid 2px  rgba(255, 255,255, .2);	box-shadow: 0 0 100px 3px rgba(125, 125,125, .5);	pointer-events: none;	z-index: 999999'></div>
-
+      <div id ="gaze" style ='position: absolute; display:none; width: 100px;height: 100px;border-radius: 50%;border: solid 2px  rgba(255, 255,255, .2);	box-shadow: 0 0 100px 3px rgba(125, 125,125, .5);	pointer-events: none;	z-index: 999999'>
+      </div>  <!-- display: none to not show the gaze pointer -->
+     
+    </div>
+      
 
 <!-- START OF GROUP: {{ aGroup.name }} {{ aGroup.gid }}  -->
 <div id='group-{{ aGroup.gseq }}' class="{{ aSurveyInfo.class.groupoutercontainer }}{{ aGroup.class }} space-col" {{ aSurveyInfo.attr.questiongroup }}>
